# XSS_checker

./: .gitignore  CMakeLists.txt  main.cpp  xss_checker
